# DdShell

./: .gitignore  2026-03-07.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  ROADMAP.md  发布文档.md  命令助手二期规划.md  命令助手介绍.md  命令助手提示词.md  质量验收清单.md
.github/workflows/: release.yml
.trellis/: .template-hashes.json
app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/docs/: animation-guide.md
app/scripts/: test-predictive-echo.ts
app/src/: App.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  wix-preserve-install-dir.wxs
app/src-tauri/capabilities/: default.json  quick-edit.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src-tauri/src/core/: ai_agent.rs  command_assist.rs  event.rs  metrics.rs  mod.rs  secret.rs  sftp.rs  ssh.rs  store.rs  workflow.rs
docs/: QUALITY-GATE.md  README.md  START-HERE.md  predictive-echo-phase1-acceptance.md  predictive-echo-phase1-progress.md  predictive-echo-phase2-plan.md  terminal-macro-runner-v2-plan.md
docs/01-PRODUCT/: FEATURE-STATUS.md  FINALSHELL-PARITY-MATRIX.md  FR-INDEX.md  PRD.md
docs/02-ARCH/: ARCHITECTURE.md  SYSTEM-INSIGHTS-SPEC.md  TECH-STACK-DECISIONS.md
docs/03-UX/: COMMAND-CENTER-SPEC.md  UI-SPEC.md
docs/04-ENGINEERING/: AI-DEVELOPMENT-SPEC.md  IMPLEMENTATION-PLAN.md  TASK-CARDS.md  TEST-PLAN.md
docs/05-RELEASE/: FIRST-RUN-CHECKLIST.md  OPS-RUNBOOK.md  RELEASE-PLAN.md
docs/06-PROMPTS/: PROMPT-KIT.md  REVIEW-CHECKLIST.md  ROLE-PROMPTS.md  STEP-BY-STEP-EXECUTION.md
docs/app/: README.md
docs/shell/: CHANGELOG.md  LICENSE  PRD.md  QUALITY-GATE.md  SECURITY.md  START-HERE.md
docs/产品规划/: 未来功能规划.md
docs/发布/: v0.2.2-版本介绍.md  v0.2.3-版本介绍.md  v0.2.4-版本介绍.md  v0.2.5-版本介绍.md  v0.2.6-版本介绍.md  v0.2.7-版本介绍.md  v0.2.8-版本介绍.md  v0.2.9-版本介绍.md  v0.3.0-版本介绍.md  v0.3.1-版本介绍.md  发布文档.md
docs/归档/: TRANSFER_FEATURES.md
docs/技术方案/: predictive-echo-phase1-plan.md  predictive-echo-phase1-progress.md  predictive-echo-phase2-progress.md  (+2 more)
shell/: CONTRIBUTING.md  README.md  Shell.md
ui/: monitor.html  snippets.html
(+848 files in other folders)
