[package]
name = "dd-shell"
version = "0.1.1"
description = "DdShell — Open-source SSH/SFTP client"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
russh = "0.49"
russh-keys = "0.49"
russh-sftp = "2.1"
async-trait = "0.1"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["compat"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
hostname = "0.4"
dirs = "6"
font-kit = "0.14"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
